package NJupiter;

import "mapreduce/yt/interface/protos/extension.proto";

message TPerfStat {
    optional string FirstKey = 1        [(NYT.column_name) = "FirstKey"];
    optional string LastKey = 2         [(NYT.column_name) = "LastKey"];
    optional uint64 Start = 3           [(NYT.column_name) = "Start"];
    optional uint64 Finish = 4          [(NYT.column_name) = "Finish"];
    optional uint64 Duration = 5        [(NYT.column_name) = "Duration"];
    optional uint64 InputRows = 6       [(NYT.column_name) = "InputRows"];
    optional uint64 OutputRows = 7      [(NYT.column_name) = "OutputRows"];
    optional uint64 InputBytes = 8      [(NYT.column_name) = "InputBytes"];
    optional uint64 OutputBytes = 9     [(NYT.column_name) = "OutputBytes"];
    optional uint64 MemoryUsage = 10    [(NYT.column_name) = "MemoryUsage"];
    optional uint64 UserCPU = 11        [(NYT.column_name) = "UserCPU"];
    optional uint64 SystemCPU = 12      [(NYT.column_name) = "SystemCPU"];
}